# dioxus-inspector

./: .mcp.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODO.md  justfile
.claude/: settings.local.json
.github/workflows/: release.yml
doc/: dioxus-desktop.md  dioxus-primitives.md  dioxus.md  tailwind-gotchas.md
mcp-server/: Cargo.toml
mcp-server/src/: bridge.rs  main.rs  tools.rs
playground/: Cargo.toml  Dioxus.toml  input.css
playground/assets/: tailwind.css
playground/src/: main.rs  main_primitives.rs  state.rs
scripts/: dev-serve.sh
src/: handlers.rs  lib.rs  screenshot.rs  types.rs
src/scripts/: diagnose.js  dom.js  inspect.js  validate_classes.js
