[package]
name = "dioxus-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for inspecting Dioxus Desktop apps"
license = "MIT"

[[bin]]
name = "dioxus-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
