[package]
name = "playground"
version = "0.1.0"
edition = "2021"
description = "Dioxus Inspector playground app"

[[bin]]
name = "playground"
path = "src/main.rs"

[dependencies]
time = "0.3"
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives" }
dioxus-inspector = { path = ".." }
dioxus-terminal = "0.1.2"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
